--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i2.png" alt="">
-        <h1 class="ci2 fz_300 tagline">หากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$200 Billion</span></h1>
+        <h1 class="ci2 fz_300 tagline">หากว่าคุณเป็น <span class="fz_600">มหาเศรษฐี</span> ที่ร่ำรวยที่สุดในโลก</h1>
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i3.png" alt="">
         <h1 class="ci2 fz_300 tagline">จะสร้าง <span class="fz_600">Big Project</span> อะไรได้บ้างนะ</h1>
+        <br>
+        <a href="boardgame.html">
+            <button class="btn btn-success myhover">เริ่มเล่น</button>
+        </a>
     </div>
 
     <div>
@@ -53,11 +57,6 @@
         <a><i class="fas fa-angle-down punchline"></i></a>
     </div>
 
-    <div class="bounceIntro">
-        <a href="boardgame.html">
-            <h1 class="text-center">Start</h1>
-        </a>
-    </div>
 
     <script>
         ScrollReveal().reveal('.headline');
